unit test updates and improvements