@@ -11,10 +11,12 @@ import static org.mockito.MockitoAnnotations.openMocks;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType.ABOUT_TO_START;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.EventType.APPEAL_RECEIVED;
+import static uk.gov.hmcts.reform.sscs.util.CommunicationRequestTestHelper.buildCommRequest;
+import static uk.gov.hmcts.reform.sscs.util.CommunicationRequestTestHelper.buildCommRequestNotActionedResponseDateOffset;
+import static uk.gov.hmcts.reform.sscs.util.CommunicationRequestTestHelper.buildCustomCommRequest;
 import static uk.gov.hmcts.reform.sscs.util.SscsUtil.calculateDueDateWorkingDays;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -151,24 +153,10 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         String expectedUserName = "Test User";
 
         // Create list of existing communications
-        CommunicationRequest tribunalCommunicationPast = CommunicationRequest.builder().value(
-            CommunicationRequestDetails.builder()
-                .requestTopic(CommunicationRequestTopic.OTHER_PARTY_PERSONAL_INFORMATION)
-                .requestMessage("Past existing Question")
-                .requestDateTime(LocalDateTime.now().minusYears(2))
-                .requestUserName("Past existing user")
-                .requestResponseDueDate(LocalDate.now().minusYears(1))
-                .build()
-        ).build();
-        CommunicationRequest tribunalCommunicationFuture = CommunicationRequest.builder().value(
-            CommunicationRequestDetails.builder()
-                .requestTopic(CommunicationRequestTopic.APPOINTEE_PERSONAL_INFORMATION)
-                .requestMessage("Future existing Question")
-                .requestDateTime(LocalDateTime.now().plusYears(1))
-                .requestUserName("Future existing user")
-                .requestResponseDueDate(LocalDate.now().plusYears(2))
-                .build()
-        ).build();
+        CommunicationRequest tribunalCommunicationPast = buildCustomCommRequest("Past existing Question",
+            "Past existing user", -2, -1);
+        CommunicationRequest tribunalCommunicationFuture = buildCustomCommRequest("Future existing Question",
+            "Future existing user", 1, 2);
         List<CommunicationRequest> existingComs = new ArrayList<>(List.of(tribunalCommunicationFuture, tribunalCommunicationPast));
         FtaCommunicationFields details = FtaCommunicationFields.builder()
             .commRequestTopic(expectedTopic)
@@ -250,14 +238,10 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
 
     @Test
     void shouldHandleReplyToTribunalQueryWithReplyText() {
-        String chosenRequestId = "1";
         String replyText = "Reply text";
 
-        CommunicationRequest communicationRequest = CommunicationRequest.builder()
-            .id(chosenRequestId)
-            .value(CommunicationRequestDetails.builder().build())
-            .build();
-        DynamicListItem chosenTribunalRequest = new DynamicListItem(chosenRequestId, "item");
+        CommunicationRequest communicationRequest = buildCommRequest();
+        DynamicListItem chosenTribunalRequest = new DynamicListItem(communicationRequest.getId(), "item");
         DynamicList tribunalRequestsDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
         FtaCommunicationFields ftaCommunicationFields = FtaCommunicationFields.builder()
             .tribunalRequestsDl(tribunalRequestsDl)
@@ -288,23 +272,11 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
 
     @Test
     void shouldUpdateFtaResponseProvidedDateOnHandleReplyToTribunalQueryIfExistingInFuture() {
-        String chosenTribunalRequestId = "1";
         String replyText = "Reply text";
 
-        CommunicationRequest communicationRequest = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId)
-            .value(CommunicationRequestDetails.builder().build())
-            .build();
-        CommunicationRequest communicationRequest2 = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId)
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActionedByFta(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now().plusYears(1))
-                    .build())
-                .build())
-            .build();
-        DynamicListItem chosenTribunalRequest = new DynamicListItem(chosenTribunalRequestId, "item");
+        CommunicationRequest communicationRequest = buildCommRequest();
+        CommunicationRequest communicationRequest2 = buildCommRequestNotActionedResponseDateOffset(1, true);
+        DynamicListItem chosenTribunalRequest = new DynamicListItem(communicationRequest.getId(), "item");
         DynamicList ftaRequestsDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
         FtaCommunicationFields ftaCommunicationFields = FtaCommunicationFields.builder()
             .tribunalRequestsDl(ftaRequestsDl)
@@ -335,23 +307,11 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
 
     @Test
     void shouldNotUpdateFtaResponseProvidedDateOnHandleReplyToTribunalQueryIfExistingInPast() {
-        String chosenTribunalRequestId = "1";
         String replyText = "Reply text";
 
-        CommunicationRequest communicationRequest = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId)
-            .value(CommunicationRequestDetails.builder().build())
-            .build();
-        CommunicationRequest communicationRequest2 = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId)
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActionedByFta(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now().minusYears(1))
-                    .build())
-                .build())
-            .build();
-        DynamicListItem chosenTribunalRequest = new DynamicListItem(chosenTribunalRequestId, "item");
+        CommunicationRequest communicationRequest = buildCommRequest();
+        CommunicationRequest communicationRequest2 = buildCommRequestNotActionedResponseDateOffset(-1, true);
+        DynamicListItem chosenTribunalRequest = new DynamicListItem(communicationRequest.getId(), "item");
         DynamicList tribunalRequestsDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
         FtaCommunicationFields ftaCommunicationFields = FtaCommunicationFields.builder()
             .tribunalRequestsDl(tribunalRequestsDl)
@@ -382,14 +342,9 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
 
     @Test
     void shouldHandleReplyToTribunalQueryWithNoActionRequired() {
-        String chosenTribunalRequestId = "1";
+        CommunicationRequest communicationRequest = buildCommRequest();
 
-        CommunicationRequest communicationRequest = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId)
-            .value(CommunicationRequestDetails.builder().build())
-            .build();
-
-        DynamicListItem chosenTribunalRequest = new DynamicListItem(chosenTribunalRequestId, "item");
+        DynamicListItem chosenTribunalRequest = new DynamicListItem(communicationRequest.getId(), "item");
         DynamicList tribunalRequestsDl = new DynamicList(chosenTribunalRequest, Collections.singletonList(chosenTribunalRequest));
         FtaCommunicationFields ftaCommunicationFields = FtaCommunicationFields.builder()
             .tribunalRequestsDl(tribunalRequestsDl)
@@ -422,29 +377,11 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
 
     @Test
     void shouldNotWipeFiltersAfterHandleReplyToTribunalQueryWhenRequestNoReplyExists() {
-        String chosenTribunalRequestId = "1";
-        String chosenTribunalRequestId2 = "2";
+        CommunicationRequest communicationRequest = buildCustomCommRequest("", "", 0, 0);
+        CommunicationRequest communicationRequest2 = buildCustomCommRequest("", "", 0, 1);
+        CommunicationRequest communicationRequest3 = buildCustomCommRequest("", "", 0, 2);
 
-        CommunicationRequest communicationRequest = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId)
-            .value(CommunicationRequestDetails.builder()
-                .requestResponseDueDate(LocalDate.of(2, 2, 2))
-                .build())
-            .build();
-        CommunicationRequest communicationRequest2 = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId2)
-            .value(CommunicationRequestDetails.builder()
-                .requestResponseDueDate(LocalDate.of(3, 3, 3))
-                .build())
-            .build();
-        CommunicationRequest communicationRequest3 = CommunicationRequest.builder()
-            .id(chosenTribunalRequestId2)
-            .value(CommunicationRequestDetails.builder()
-                .requestResponseDueDate(LocalDate.of(4, 4, 4))
-                .build())
-            .build();
-
-        DynamicListItem chosenTribunalRequest = new DynamicListItem(chosenTribunalRequestId, "item");
+        DynamicListItem chosenTribunalRequest = new DynamicListItem(communicationRequest.getId(), "item");
         DynamicList tribunalRequestsDl = new DynamicList(chosenTribunalRequest, List.of(chosenTribunalRequest));
         FtaCommunicationFields ftaCommunicationFields = FtaCommunicationFields.builder()
             .tribunalRequestsDl(tribunalRequestsDl)
@@ -468,7 +405,7 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         assertEquals(userName, request.getRequestReply().getReplyUserName());
         assertNotNull(request.getRequestReply().getReplyDateTime());
         assertNull(communicationRequest.getValue().getRequestResponseDueDate());
-        assertEquals(LocalDate.of(3, 3, 3), response.getData().getCommunicationFields().getFtaResponseDueDate());
+        assertEquals(LocalDate.now().plusYears(1), response.getData().getCommunicationFields().getFtaResponseDueDate());
     }
 
     @Test
@@ -501,12 +438,9 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
             .tribunalRequestType(requestType)
             .commRequestResponseNoAction(List.of("something"))
             .tribunalRequestNoResponseQuery("something")
-            .tribunalRequestsDl(new DynamicList(null, Collections.emptyList()))
+            .ftaRequestsToReviewDl(new DynamicMixedChoiceList(null, Collections.emptyList()))
             .commRequestResponseTextArea("something")
-            .tribunalRequestRespondedQuery("something")
-            .tribunalRequestRespondedReply("something")
             .ftaRequestsDl(new DynamicList(null, Collections.emptyList()))
-            .commRequestActioned(YesNo.NO)
             .build();
         sscsCaseData.setCommunicationFields(communicationFields);
 
@@ -520,25 +454,21 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
         assertNull(response.getData().getCommunicationFields().getFtaRequestsDl());
         assertNull(response.getData().getCommunicationFields().getTribunalRequestNoResponseQuery());
         assertNull(response.getData().getCommunicationFields().getCommRequestResponseTextArea());
-        assertNull(response.getData().getCommunicationFields().getTribunalRequestRespondedQuery());
-        assertNull(response.getData().getCommunicationFields().getTribunalRequestRespondedReply());
+        assertNull(response.getData().getCommunicationFields().getFtaRequestsToReviewDl());
         assertNull(response.getData().getCommunicationFields().getTribunalRequestsDl());
-        assertNull(response.getData().getCommunicationFields().getCommRequestActioned());
     }
 
     @Test
     void shouldHandleReviewTribunalReplyWithNoMoreReviewsNeeded() {
-        CommunicationRequest communicationRequest = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActionedByFta(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now()).build()).build()).build();
+        CommunicationRequest communicationRequest = buildCommRequestNotActionedResponseDateOffset(0, true);
+        CommunicationRequest communicationRequest2 = buildCommRequestNotActionedResponseDateOffset(1, true);
         DynamicListItem dynamicListItem = new DynamicListItem(communicationRequest.getId(), "item");
-        DynamicList dynamicList = new DynamicList(dynamicListItem, Collections.singletonList(dynamicListItem));
+        DynamicListItem dynamicListItem2 = new DynamicListItem(communicationRequest2.getId(), "item2");
+        DynamicMixedChoiceList dynamicList = new DynamicMixedChoiceList(List.of(dynamicListItem2, dynamicListItem), List.of(dynamicListItem2, dynamicListItem));
         FtaCommunicationFields communicationFields = FtaCommunicationFields.builder()
             .tribunalRequestType(TribunalRequestType.REVIEW_TRIBUNAL_REPLY)
-            .ftaRequestsDl(dynamicList)
-            .tribunalCommunications(Collections.singletonList(communicationRequest))
+            .ftaRequestsToReviewDl(dynamicList)
+            .tribunalCommunications(List.of(communicationRequest, communicationRequest2))
             .ftaResponseProvidedDate(LocalDate.now())
             .build();
         sscsCaseData.setCommunicationFields(communicationFields);
@@ -548,36 +478,25 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
 
         List<CommunicationRequest> resultComs = response.getData().getCommunicationFields().getTribunalCommunications();
         assertNotNull(resultComs);
-        assertEquals(1, resultComs.size());
-        CommunicationRequestDetails resultCom = resultComs.getFirst().getValue();
-        assertEquals(YesNo.YES, resultCom.getRequestReply().getReplyHasBeenActionedByFta());
+        assertEquals(2, resultComs.size());
+        assertEquals(YesNo.YES, resultComs.getFirst().getValue().getRequestReply().getReplyHasBeenActionedByFta());
+        assertEquals(YesNo.YES, resultComs.getLast().getValue().getRequestReply().getReplyHasBeenActionedByFta());
         assertNull(response.getData().getCommunicationFields().getFtaResponseProvidedDate());
     }
 
     @Test
     void shouldHandleReviewTribunalReplyWithOlderReviewStillNeeded() {
-        CommunicationRequest communicationRequest1 = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActionedByFta(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now().plusYears(1)).build()).build()).build();
-        CommunicationRequest communicationRequest2 = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActionedByFta(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now()).build()).build()).build();
-        CommunicationRequest communicationRequest3 = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActionedByFta(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now().minusYears(1)).build()).build()).build();
+        CommunicationRequest communicationRequest1 = buildCommRequestNotActionedResponseDateOffset(1, true);
+        CommunicationRequest communicationRequest2 = buildCommRequestNotActionedResponseDateOffset(0, true);
+        CommunicationRequest communicationRequest3 = buildCommRequestNotActionedResponseDateOffset(-1, true);
         DynamicListItem dynamicListItem1 = new DynamicListItem(communicationRequest1.getId(), "item1");
         DynamicListItem dynamicListItem2 = new DynamicListItem(communicationRequest2.getId(), "item2");
         DynamicListItem dynamicListItem3 = new DynamicListItem(communicationRequest3.getId(), "item3");
-        DynamicList dynamicList = new DynamicList(dynamicListItem1, List.of(dynamicListItem1, dynamicListItem2, dynamicListItem3));
+        DynamicMixedChoiceList dynamicList = new DynamicMixedChoiceList(List.of(dynamicListItem1),
+            List.of(dynamicListItem1, dynamicListItem2, dynamicListItem3));
         FtaCommunicationFields communicationFields = FtaCommunicationFields.builder()
             .tribunalRequestType(TribunalRequestType.REVIEW_TRIBUNAL_REPLY)
-            .ftaRequestsDl(dynamicList)
+            .ftaRequestsToReviewDl(dynamicList)
             .tribunalCommunications(List.of(communicationRequest3, communicationRequest2, communicationRequest1))
             .build();
         sscsCaseData.setCommunicationFields(communicationFields);
@@ -596,28 +515,17 @@ class TribunalCommunicationAboutToSubmitHandlerTest {
 
     @Test
     void shouldHandleReviewTribunalReplyWithNewReviewStillNeeded() {
-        CommunicationRequest communicationRequest1 = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActionedByFta(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now().plusYears(1)).build()).build()).build();
-        CommunicationRequest communicationRequest2 = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActionedByFta(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now()).build()).build()).build();
-        CommunicationRequest communicationRequest3 = CommunicationRequest.builder()
-            .value(CommunicationRequestDetails.builder()
-                .requestReply(CommunicationRequestReply.builder()
-                    .replyHasBeenActionedByFta(YesNo.NO)
-                    .replyDateTime(LocalDateTime.now().minusYears(1)).build()).build()).build();
+        CommunicationRequest communicationRequest1 = buildCommRequestNotActionedResponseDateOffset(1, true);
+        CommunicationRequest communicationRequest2 = buildCommRequestNotActionedResponseDateOffset(0, true);
+        CommunicationRequest communicationRequest3 = buildCommRequestNotActionedResponseDateOffset(-1, true);
         DynamicListItem dynamicListItem1 = new DynamicListItem(communicationRequest1.getId(), "item1");
         DynamicListItem dynamicListItem2 = new DynamicListItem(communicationRequest2.getId(), "item2");
         DynamicListItem dynamicListItem3 = new DynamicListItem(communicationRequest3.getId(), "item3");
-        DynamicList dynamicList = new DynamicList(dynamicListItem3, List.of(dynamicListItem1, dynamicListItem2, dynamicListItem3));
+        DynamicMixedChoiceList dynamicList = new DynamicMixedChoiceList(Collections.singletonList(dynamicListItem3),
+            List.of(dynamicListItem1, dynamicListItem2, dynamicListItem3));
         FtaCommunicationFields communicationFields = FtaCommunicationFields.builder()
             .tribunalRequestType(TribunalRequestType.REVIEW_TRIBUNAL_REPLY)
-            .ftaRequestsDl(dynamicList)
+            .ftaRequestsToReviewDl(dynamicList)
             .tribunalCommunications(List.of(communicationRequest1, communicationRequest2, communicationRequest3))
             .build();
         sscsCaseData.setCommunicationFields(communicationFields);
